# mpi-cpp-project

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  common.h  compose.yml  master_node.cpp  worker_node.cpp
